fixed element overlap/positioning

--- a/style.css
+++ b/style.css
@@ -86,7 +86,7 @@ html {
 }
 
 #skills {
-    margin-top: 5vh;
+    margin-top: 40px;
     font-family: 'Roboto', sans-serif;
     background: rgba(255, 255, 255, 0.9);
     color: rgba(0, 0, 0);
@@ -94,6 +94,7 @@ html {
     padding: 50px;
 }
 .aboutpar {
+    padding-top: 3%;
     font-size: 1.4em;
 }
 
@@ -160,7 +161,9 @@ div {
 
 .avatar {
     border-radius: 50%;
-    max-height: 200px;
+    max-width: 250px;
+    max-height: 250px;
+    width: 100%;
     display: block;
     margin-right: auto;
     margin-left: auto;
